# Model-integration

./: .gitignore  README.md  start_backend.sh  start_frontend.sh  start_frontend_react.sh  verify_setup.py
backend/: api.py  model_manager.py  pyproject.toml  requirements.txt
frontend/: app.py  pyproject.toml  requirements.txt
frontend-react/: README.md  index.html  package.json
frontend-react/src/: App.jsx  index.css
frontend-react/src/components/: CodeGenTab.jsx  ErrorBoundary.jsx  T5Tab.jsx
frontend-react/src/services/: api.js
models/: .gitkeep
