[project]
name = "model-integration-backend"
version = "1.0.0"
description = "FastAPI backend for T5 and CodeGen model inference"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "safetensors>=0.4.0",
    "python-multipart>=0.0.6",
]


